third_party/blink/web_tests/external/wpt/selection/idlharness.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface Document: original interface defined assert_true: Original interface should be defined expected true got false
FAIL Partial interface Window: original interface defined assert_true: Original interface should be defined expected true got false
FAIL Partial interface mixin GlobalEventHandlers: original interface mixin defined assert_true: Original interface mixin should be defined expected true got false
PASS Selection interface: existence and properties of interface object
PASS Selection interface object length
PASS Selection interface object name
PASS Selection interface: existence and properties of interface prototype object
PASS Selection interface: existence and properties of interface prototype object's "constructor" property
PASS Selection interface: existence and properties of interface prototype object's @@unscopables property
PASS Selection interface: attribute anchorNode
PASS Selection interface: attribute anchorOffset
PASS Selection interface: attribute focusNode
PASS Selection interface: attribute focusOffset
PASS Selection interface: attribute isCollapsed
PASS Selection interface: attribute rangeCount
PASS Selection interface: attribute type
PASS Selection interface: operation getRangeAt(unsigned long)
PASS Selection interface: operation addRange(Range)
PASS Selection interface: operation removeRange(Range)
PASS Selection interface: operation removeAllRanges()
PASS Selection interface: operation empty()
PASS Selection interface: operation collapse(Node, unsigned long)
PASS Selection interface: operation setPosition(Node, unsigned long)
PASS Selection interface: operation collapseToStart()
PASS Selection interface: operation collapseToEnd()
PASS Selection interface: operation extend(Node, unsigned long)
PASS Selection interface: operation setBaseAndExtent(Node, unsigned long, Node, unsigned long)
PASS Selection interface: operation selectAllChildren(Node)
PASS Selection interface: operation deleteFromDocument()
PASS Selection interface: operation containsNode(Node, boolean)
PASS Selection interface: stringifier
Harness: the test ran to completion.

